[UI] Add header component and fix vertical overflow

--- a/frontend/app/index.css
+++ b/frontend/app/index.css
@@ -23,6 +23,7 @@ code {
 html,
 body {
   height: 100%;
+  overflow-y: hidden;
   margin: 0;
   line-height: 1.5;
   color: #121212;
@@ -54,6 +55,10 @@ button:hover {
 button:active {
   box-shadow: 0 0px 1px hsla(0, 0%, 0%, 0.4);
   transform: translateY(1px);
+}
+
+.menu-item-right {
+  margin-left: auto !important;
 }
 
 #author h1 {
